Facilitates exchange of successful clothing patterns
Design Sharing Contract

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,6 +5,11 @@ authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
+[contracts.design-sharing]
+path = 'contracts/design-sharing.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.garment-registration]
 path = 'contracts/garment-registration.clar'
 clarity_version = 2
